-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.2
-
None
-
Mac OS X 10.7.5
-
-
1caa0c023f4fa60446094e53f22ee79771130e2f
OpenGL support with high-dpi (Retina) mode is broken.
Repro:
-enable/emulate high-dpi modes (if not already available) with "sudo defaults write /Library/Preferences/com.apple.windowserver DisplayResolutionEnabled -bool YES"
-open and run Hello GL example from Qt SDK 5.0.2
The GL window is pixelated and most importantly the render area is doubled, goes outside the window. Could not reduce it even by forcing glViewport to a lower resolution.
| For Gerrit Dashboard: QTBUG-31000 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 55445,1 | Cocoa: Fix Open GL resolution in high-dpi | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 55977,1 | Cocoa: Fix Open GL resolution in high-dpi | stable | qt/qtbase | Status: MERGED | +2 | 0 |